--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "express-validator": "^6.14.3",
     "jest": "^29.7.0",
     "mongodb": "^6.4.0",
+    "mongoose": "^8.2.4",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^20.2.1",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
